# kedro-mcp-claude

./: .gitmodules  RAG_SUPPORT_ASSESSMENT.md  README.md  kedro_mcp_server.py  pyproject.toml  requirements.txt  test_manual.py  test_mcp_client.py  test_mcp_complete.py  test_rag_pipeline.py  test_rag_support.py  test_simple.py
example-rag/src/rag_system/pipelines/rag_system/: __init__.py  pipeline.py
kedro_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
