[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kedro-mcp"
version = "0.1.0"
description = "MCP server for Kedro ML/Data Science pipeline management"
authors = [{name = "MCP Kedro Server", email = "noreply@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pandas",
    "kedro"
]

[project.urls]
Homepage = "https://github.com/example/kedro-mcp"
"Bug Tracker" = "https://github.com/example/kedro-mcp/issues"

[project.scripts]
kedro-mcp-server = "kedro_mcp_server:main"

[tool.setuptools]
py-modules = ["kedro_mcp_server"]